Fix spacing and font size in blog post

--- a/src/Components/Blog/Detail/index.css
+++ b/src/Components/Blog/Detail/index.css
@@ -1,3 +1,12 @@
 #BlogDetail {
   padding-top: 4em;
 }
+
+#BlogDetail #title {
+  font-size: 3em;
+  margin-bottom: 0;
+}
+
+#BlogDetail .md {
+  margin-top: 2em;
+}
